fix main event picture overflow

--- a/components/events.css
+++ b/components/events.css
@@ -12,11 +12,14 @@
 
 #mEvent img {
     width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: top;
 }
 
 #evBanner {
     position: absolute;
-    bottom: 2%;
+    bottom: 1rem;
     left: 0;
     right: 0;
     padding: 1rem 2rem;
